# glue-beacon

./: .gitignore  README.md  lambda.py  lambda_test.py  pyproject.toml  stack.yaml
.github/workflows/: ci.yaml
src/: lambda.py
tests/: lambda_test.py
