[tool.poetry]
name = "glue-beacon"
version = "0.1.0"
description = ""
authors = ["Vitaliy Boyarsky <boyarsky.vitaliy@live.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "~7.2.1"
pylint = "~2.15.10"
isort = "~5.11.5"
poethepoet = "~0.19.0"
boto3 = "~1.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
